# VirusDetect

./: .gitignore  BIOCONDA.md  BIOCONDA_PR_TEMPLATE.md  CHANGELOG.md  Install.sh  InstallDB.pl  LEGACY.md  LEGACY_REMOVAL.md  README.md  RELEASE.md  REPORT_PARITY.md  complete_algorithm.pl  pixi.toml  pyproject.toml  run_test.sh  virus_detect.pl
databases/: vrl_plant.amb  vrl_plant.ann  vrl_plant.fai  vrl_plant.nhr  vrl_plant.nin  vrl_plant_prot.phr  vrl_plant_prot.pin  vrl_plant_prot_table
recipes/virusdetect/: meta.yaml
src/virusdetect/: __init__.py  __main__.py  cli.py  db.py  fasta.py  identify.py  legacy.py  pileup.py  pipeline.py  runtime.py  sam.py  sample.py  stages.py  tools.py
tests/: test_cli.py  test_db.py  test_identify.py  test_pileup.py  test_pipeline.py  test_runtime.py  test_sam.py
tools/: readme.md  remind.md  sRNA_clean.pl  update_desc_table_v0.txt  update_desc_table_v205.txt  update_desc_table_v206.txt  update_desc_table_v211.txt  update_genus_table_v205.txt  update_genus_table_v206.txt  update_hname_table_v205.txt  update_hname_table_v206.txt  viral_DB_prepare.pl
tools/dev/: ICTV_2013_genus_uniq_host_info.txt  update_desc_table_v0.bak.txt  update_desc_table_v204.txt  update_hname_table_v0.txt
tools/genbank_vrl_classification/: ICTV_2013_genus_uniq_host_info_raw.txt  readme.md  update_desc_table_v214.txt  update_genus_table_v211.txt  update_genus_table_v214.txt  update_genus_table_v220.txt  update_genus_table_v248.txt  update_hname_table_v211.txt  update_hname_table_v214.txt  update_hname_table_v220.txt  update_hname_table_v248.txt  (+1 more)
(+3 files in other folders)
