[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virusdetect"
version = "2.0.0a0"
description = "Python rewrite of the VirusDetect plant virus discovery pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "kentnf" }
]
keywords = ["bioinformatics", "plant-virus", "virus-detection", "rna-seq", "srna"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
virusdetect = "virusdetect.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
